[package]
name = "cytogon-bin"
version = "0.1.0"
authors = ["Jerome Humbert <djeedai@gmail.com>"]
edition = "2021"
description = "Mesh generation CLI tool based on cellular automaton"
repository = "https://github.com/djeedai/cytogon"
homepage = "https://github.com/djeedai/cytogon"
keywords = ["mesh", "geometry", "2d", "3d", "procedural", "cellular-automaton"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cytogon = { version = "0.1.0", path = "../cytogon" }
rand = "0.8.5"
