[package]
name = "cytogon"
version = "0.1.0"
authors = ["Jerome Humbert <djeedai@gmail.com>"]
edition = "2021"
description = "Mesh generation library based on cellular automata"
repository = "https://github.com/djeedai/cytogon/cytogon"
homepage = "https://github.com/djeedai/cytogon"
documentation = "https://docs.rs/cytogon"
keywords = ["mesh", "geometry", "2d", "3d", "procedural", "cellular-automaton"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytemuck = "1.21.0"
glam = "0.29.2"
rand = "0.8.5"
tracing = { version = "0.1.41", optional = true }

[features]
default = []

# Emit tracing/profiling markers
trace = ["dep:tracing"]
